logs/common-error.log
2017-07-03 16:25:56,044 ERROR 15688 [about/about.js] server render bundle error, try client render, the server render error __vue_ssr_bundle__:2
  "about/about.js": "client/js/about/about.js",
                  ^

SyntaxError: Unexpected token :
    at getCompiledScript (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5787:18)
    at evaluateModule (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5802:18)
    at /home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5856:17
    at Promise (<anonymous>)
    at /home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5854:14
    at Object.renderToString (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:6022:9)
    at Promise (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/egg-view-vue/lib/engine.js:48:62)
    at Promise (<anonymous>)
    at Engine.renderBundle (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/egg-view-vue/lib/engine.js:47:12)
    at /home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/egg-webpack-vue/app.js:19:42
    at Generator.next (<anonymous>)
    at onFulfilled (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/co/index.js:65:19)
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:169:7)
2017-07-03 17:03:28,558 ERROR 23101 [-/127.0.0.1/-/10ms GET /] nodejs.TypeError: this.render is not a function
    at UserController.index (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/app/controller/about.js:9:18)
    at index.next (<anonymous>)
    at onFulfilled (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/co/index.js:65:19)
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:169:7)

pid: 23101
hostname: joey-Lenovo

2017-07-03 17:03:29,425 ERROR 23101 [-/127.0.0.1/-/1ms GET /] nodejs.TypeError: this.render is not a function
    at UserController.index (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/app/controller/about.js:9:18)
    at index.next (<anonymous>)
    at onFulfilled (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/co/index.js:65:19)
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:169:7)

pid: 23101
hostname: joey-Lenovo

2017-07-03 17:04:03,025 ERROR 23329 [about/about.js] server render bundle error, try client render, the server render error __vue_ssr_bundle__:2
  "about/about.js": "client/js/about/about.js",
                  ^

SyntaxError: Unexpected token :
    at getCompiledScript (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5787:18)
    at evaluateModule (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5802:18)
    at /home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5856:17
    at Promise (<anonymous>)
    at /home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:5854:14
    at Object.renderToString (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/vue-server-renderer/build.js:6022:9)
    at Promise (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/egg-view-vue/lib/engine.js:48:62)
    at Promise (<anonymous>)
    at Engine.renderBundle (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/egg-view-vue/lib/engine.js:47:12)
    at /home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/egg-webpack-vue/app.js:19:42
    at Generator.next (<anonymous>)
    at onFulfilled (/home/joey/workspace/workspace-node/egg-vue-webpack-boilerplate/node_modules/co/index.js:65:19)
    at <anonymous>
    at process._tickCallback (internal/process/next_tick.js:169:7)
